# QP

./: .gitignore  .gitmodules  README.md
QPFPGA/: README.md  admm_pcg_params.h  fpga_params.h  fpga_utils.cpp  solver.cpp  utils.cpp  utils.h
QPFPGA/accelerator_test/: main.cpp
QPFPGA/cpp/: CMakeLists.txt
QPFPGA/cpp/include/: admm_pcg_params.h  api.h  utils.h
QPFPGA/cpp/include/qpfpga/: api.h
QPFPGA/cpp/src/: api.cpp  fpga_utils.cpp  utils.cpp
QPFPGA/examples/: cvxpy_qpfpga_demo.py
QPFPGA/qpfpga/: __init__.py  backend.py  data.py  solver.py
QPFPGA/tests/: test_qpfpga_integration.py
admm/: README.md  measure_activity.tcl  notas
admm/DSE/: generate_bitstreams.py  run_dse.py
admm/jupyter/: Makefile  admm.ipynb  admm_cvxpygen_data.ipynb  admm_cvxpygen_data_tile.ipynb
admm/reports/: admm_cosim.rpt  admm_csynth.rpt
admm/sw/: pcg_sw_bench
axpy/: Makefile
axpy/reports/: axpy_cosim.rpt  axpy_csynth.rpt
axpy/scripts/: axpy_HLS.tcl  axpy_HLS_cosim.tcl  axpy_HLS_csynth.tcl  axpy_HLS_export.tcl  axpy_HLS_sim.tcl  axpy_Vivado.tcl
dot_prod/: Makefile
dot_prod/jupyter/: dot_prod.ipynb
dot_prod/reports/: dot_prod_cosim.rpt  dot_prod_csynth.rpt
dot_prod/scripts/: dot_prod_HLS.tcl  dot_prod_HLS_cosim.tcl  dot_prod_HLS_csynth.tcl  dot_prod_HLS_export.tcl  dot_prod_HLS_sim.tcl  dot_prod_Vivado.tcl  dot_prod_Vivado_impl.tcl
mv/: mv.xpr
mv/mv/: hls.app
pcg/: Makefile
pcg/jupyter/: Makefile  pcg.ipynb  pcg_test.c  pcg_test_3x3.c
pcg/reports/: pcg_cosim.rpt  pcg_csynth.rpt
pcg/scripts/: pcg_HLS_csynth.tcl  pcg_HLS_export.tcl  pcg_HLS_sim.tcl  pcg_Vivado.tcl  pcg_Vivado_impl.tcl
pcg/vcs/: README.txt  top.sh
scratch_QP/spmv/HLS/spmv_csr/spmv_csr/hls/impl/misc/drivers/spmv_csr_v1_0/src/: CMakeLists.txt  xspmv_csr.c
scratch_QP/spmv_csr_optimized/: Makefile
scratch_QP/spmv_fast_stream/: Makefile
scratch_QP/test_spmv_tiling/: spmv_tiling  spmv_tiling.cpp
scratch_admm/admm_adaptative_rho_20pes/: design_1_hierarchical_utilization.rpt
spmv/scripts/: deploy.sh
spmv/spmv_csr_vivado/: spmv_csr_vivado.xpr
spmv_coo/: Makefile
spmv_coo/jupyter/: spmv_coo.ipynb
spmv_coo/reports/: spmv_coo_cosim.rpt  spmv_coo_csynth.rpt
spmv_coo/scripts/: spmv_coo_HLS.tcl  spmv_coo_HLS_cosim.tcl  spmv_coo_HLS_csynth.tcl  spmv_coo_HLS_export.tcl  spmv_coo_HLS_sim.tcl  spmv_coo_Vivado.tcl  spmv_coo_Vivado_impl.tcl
spmv_csc/jupyter/: spmv_csc.ipynb
spmv_csc/reports/: spmv_csc_cosim.rpt  spmv_csc_csynth.rpt
spmv_csc/scripts/: spmv_csc_HLS.tcl  spmv_csc_HLS_cosim.tcl  spmv_csc_HLS_csynth.tcl  spmv_csc_Vivado_impl.tcl
spmv_csc_tmp/: Makefile
spmv_csc_tmp/reports/: spmv_csc_cosim.rpt  spmv_csc_csynth.rpt
spmv_csc_tmp/scripts/: spmv_csc_HLS.tcl  spmv_csc_Vivado.tcl
spmv_csc_tmp/spmv_csc/spmv_csc/hls/impl/misc/drivers/spmv_csc_v1_0/src/: CMakeLists.txt  xspmv_csc.c  xspmv_csc.h  xspmv_csc_hw.h  xspmv_csc_linux.c  xspmv_csc_sinit.c
spmv_csr_optimized/: Makefile
(+2969 files in other folders)
